--- a/rush.yaml
+++ b/rush.yaml
@@ -29493,7 +29493,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    1 face-up monster on your opponent's field loses 800 ATK until the end of this turn. Then, you can destroy a Field Spell Card on your opponent's field. If you destroyed a Field Spell Card by this effect, inflict 800 damage to your opponent.
+    1 face-up monster on your opponent's field loses 800 ATK until the end of this turn. Then, you can destroy a Field Spell Card on your opponent's field. Then, if you destroyed a Field Spell Card by this effect, inflict 800 damage to your opponent.
   de:
   es:
   fr:
@@ -36158,7 +36158,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    1 face-up monster on your opponent's field loses 500 ATK until the end of this turn. Then, it loses additional 1500 ATK until the end of this turn, if your opponent's LP are at least 2000 higher than yours.
+    1 face-up monster on your opponent's field loses 500 ATK until the end of this turn. Then, it loses additional 1500 ATK until the end of this turn if your opponent's LP are at least 2000 higher than yours.
   de:
   es:
   fr:
@@ -44418,7 +44418,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    1 face-up Level 9 LIGHT Attribute monster or 1 face-up LIGHT Attribute Normal Monster on your field gains 500 ATK until the end of this turn. Then, it gains additional 1000 ATK until the end of this turn, if you have "Imaginary Actor" in your Graveyard.
+    1 face-up Level 9 LIGHT Attribute monster or 1 face-up LIGHT Attribute Normal Monster on your field gains 500 ATK until the end of this turn. Then, it gains additional 1000 ATK until the end of this turn if you have "Imaginary Actor" in your Graveyard.
   de:
   es:
   fr:
@@ -53741,7 +53741,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    1 face-up Level 6 or higher DARK Attribute Spellcaster Type monster on your field gains 1000 ATK until the end of this turn. Then, it gains additional 1000 ATK until the end of this turn, if you have "Dark Magician" or "Dark Magician Girl" face-up on your field.
+    1 face-up Level 6 or higher DARK Attribute Spellcaster Type monster on your field gains 1000 ATK until the end of this turn. Then, it gains additional 1000 ATK until the end of this turn if you have "Dark Magician" or "Dark Magician Girl" face-up on your field.
   de:
   es:
   fr:
@@ -58372,7 +58372,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Add 1 "Zap Zap Octospark" from your Graveyard to your hand. Then, inflict 800 damage to your opponent. If your opponent has a face-up Level 8 monster on their field, this turn, this card gains 800 ATK, and all face-up Level 8 monsters on your opponent's field lose 800 ATK.
+    Add 1 "Zap Zap Octospark" from your Graveyard to your hand. Then, inflict 800 damage to your opponent. Then, if your opponent has a face-up Level 8 monster on their field, this turn, this card gains 800 ATK, and all face-up Level 8 monsters on your opponent's field lose 800 ATK.
   de:
   es:
   fr:
@@ -63559,7 +63559,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Choose 1 face-up Galaxy Type monster on your field. If it attacks a Defense Position monster this turn, inflict piercing battle damage (if the ATK of the attacking monster exceeds the DEF of the attack target, inflict the difference). Then, if that monster was a Normal Monster, you can change the battle position of 1 monster on your opponent's field (Attack Position becomes face-up Defense Position, Defense Position becomes face-up Attack Position).
+    Choose 1 face-up Galaxy Type monster on your field. If it attacks a Defense Position monster this turn, inflict piercing battle damage (if the ATK of the attacking monster exceeds the DEF of the attack target, inflict the difference). Then, if that monster is a Normal Monster, you can change the battle position of 1 monster on your opponent's field (Attack Position becomes face-up Defense Position, Defense Position becomes face-up Attack Position).
   de:
   es:
   fr:
@@ -64484,7 +64484,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Draw until you have 5 cards in your hand and reveal all cards in your hand to your opponent. If a monster(s) is among them, gain LP equal to [the number of those monsters] x 200.
+    Draw until you have 5 cards in your hand and reveal your entire hand to your opponent. If a monster(s) is among them, gain LP equal to [the number of those monsters] x 200.
   de:
   es:
   fr:
@@ -74242,7 +74242,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    This card gains ATK equal to [the number of face-up DARK Attribute monsters on your field] x 300 until the end of this turn. Then, it gains additional 600 ATK until the end of this turn, if your opponent has a face-up LIGHT Attribute monster on their field.
+    This card gains ATK equal to [the number of face-up DARK Attribute monsters on your field] x 300 until the end of this turn. Then, it gains additional 600 ATK until the end of this turn if your opponent has a face-up LIGHT Attribute monster on their field.
   de:
   es:
   fr:
@@ -80489,7 +80489,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Send 1 random card from your opponent's hand to the Graveyard. Then, if your opponent has 2 or more cards in their hand, they can draw 1 card.
+    Send 1 random card from your opponent's hand to the Graveyard. Then, if your opponent has 2 cards or more in their hand, they can draw 1 card.
   de:
   es:
   fr:
@@ -82205,7 +82205,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Set 1 "Shadow Flower Sewing" or 1 "Shadow Flower Duplication" from your Graveyard in your Spell & Trap Zone. Then, send the bottom card of your Deck to the Graveyard. If you sent a Level 5 Plant Type Normal Monster to the Graveyard by this effect, you can also Special Summon 1 Plant Type Normal Monster from your Graveyard face-up to your field.
+    Set 1 "Shadow Flower Sewing" or 1 "Shadow Flower Duplication" from your Graveyard in your Spell & Trap Zone. Then, send the bottom card of your Deck to the Graveyard. Then, if you sent a Level 5 Plant Type Normal Monster to the Graveyard by this effect, you can Special Summon 1 Plant Type Normal Monster from your Graveyard face-up to your field.
   de:
   es:
   fr:
@@ -97004,7 +97004,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Reduce the Level of 1 face-up Level 4 or higher monster on the field by 3 until the end of this turn. Then, this card gains 500 ATK until the end of this turn. If you have "Transamu Rainac" in your Graveyard, this card's name becomes "Transamu Rainac" this turn.
+    Reduce the Level of 1 face-up Level 4 or higher monster on the field by 3 until the end of this turn. Then, this card gains 500 ATK until the end of this turn. Then, if you have "Transamu Rainac" in your Graveyard, this card's name becomes "Transamu Rainac" this turn.
   de:
   es:
   fr:
@@ -101170,7 +101170,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    1 face-up Sea Serpent Type monster on your field gains 400 ATK until the end of this turn. Then, you can make it gain additional 600 ATK until the end of this turn, if you have no monsters in your Graveyard.
+    1 face-up Sea Serpent Type monster on your field gains 400 ATK until the end of this turn. Then, you can make it gain additional 600 ATK until the end of this turn if you have no monsters in your Graveyard.
   de:
   es:
   fr:
@@ -104818,7 +104818,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    This card can attack twice during this turn. Then, you can destroy 1 face-up Level 6 Effect Monster on your opponent's field. If you destroyed a monster by this effect, this card gains 600 ATK until the end of this turn.
+    This card can attack twice during this turn. Then, you can destroy 1 face-up Level 6 Effect Monster on your opponent's field. Then, if you destroyed a monster by this effect, this card gains 600 ATK until the end of this turn.
   de:
   es:
   fr:
@@ -106352,7 +106352,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Fusion Summon by sending face-up Dragon Type monsters from your field to the Graveyard as material. Then, if you sent "Red Boot Boost Dragon" to the Graveyard by this effect, you can send the top 7 cards of your Deck to the Graveyard. If you sent a card from the Deck to the Graveyard, you can also send the top 7 cards of your opponent's Deck to the Graveyard.
+    Fusion Summon by sending face-up Dragon Type monsters from your field to the Graveyard as material. Then, if you sent "Red Boot Boost Dragon" to the Graveyard by this effect, you can send the top 7 cards of your Deck to the Graveyard. Then, if you sent a card from the Deck to the Graveyard, you can send the top 7 cards of your opponent's Deck to the Graveyard.
   de:
   es:
   fr:
@@ -110226,7 +110226,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    The equipped monster gains 500 ATK. Then, it gains additional 500 ATK, if you have 5 or more Wyrm Type monsters in your Graveyard.
+    The equipped monster gains 500 ATK. Then, it gains additional 500 ATK if you have 5 or more Wyrm Type monsters in your Graveyard.
   de:
   es:
   fr:
@@ -125003,7 +125003,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Draw 1 card. Then, this card gains ATK equal to [the total number of cards in both players' hands] x 500 until the end of your opponent's next turn. If you have 1 card in your hand, you can also destroy 1 card on your opponent's field.
+    Draw 1 card. Then, this card gains ATK equal to [the total number of cards in both players' hands] x 500 until the end of your opponent's next turn. Then, if you have 1 card in your hand, you can destroy 1 card on your opponent's field.
   de:
   es:
   fr:
@@ -132834,7 +132834,7 @@ effect_types:
 - Continuous
 effect:
   en: |-
-    This card gains ATK equal to [the number of different Types in both players' Graveyards] x 300. If there are 5 or more different Types in the Graveyards, this card cannot be destroyed by your opponent's card effects, then it gains additional 3000 ATK, if there are 10 or more different Types in the Graveyards.
+    This card gains ATK equal to [the number of different Types in both players' Graveyards] x 300. If there are 5 or more different Types in the Graveyards, this card cannot be destroyed by your opponent's card effects, then it gains additional 3000 ATK if there are 10 or more different Types in the Graveyards.
   de:
   es:
   fr:
@@ -141406,7 +141406,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Choose 5 cards in your opponent's Graveyard, including 2 Level 4 or lower monsters. Your opponent places those cards on top of their Deck in any order.
+    Choose 5 cards in your opponent's Graveyard, including 2 Level 4 or lower monsters. Your opponent places them on top of their Deck in any order.
   de:
   es:
   fr:
