--- a/data/series/map.yaml
+++ b/data/series/map.yaml
@@ -4999,7 +4999,7 @@ Mekk-Knight:
   ja: ジャックナイツ
   ja_romaji: Jakkunaitsu
   ko: 잭나이츠
-  ko_rr:
+  ko_rr: Jangnaicheu
   zh-TW:
   zh-CN: 机界骑士
 Parshath:
