--- a/data/cards/06728559.yaml
+++ b/data/cards/06728559.yaml
@@ -90,7 +90,7 @@ sets:
     rarities:
     - Super Rare
 limit_regulation:
-  tcg: Forbidden
+  tcg: Limited
   ocg: Unlimited
 yugipedia_page_id: 705742
 master_duel_rarity: UR
