--- a/data/cards/09411399.yaml
+++ b/data/cards/09411399.yaml
@@ -255,7 +255,7 @@ sets:
     rarities:
     - Super Rare
 limit_regulation:
-  tcg: Semi-Limited
+  tcg: Unlimited
   ocg: Semi-Limited
   speed: Unlimited
 yugipedia_page_id: 14402
