--- a/data/cards/67616300.yaml
+++ b/data/cards/67616300.yaml
@@ -147,7 +147,7 @@ sets:
     rarities:
     - Common
 limit_regulation:
-  tcg: Forbidden
+  tcg: Limited
   ocg: Unlimited
 yugipedia_page_id: 351891
 master_duel_rarity: UR
