--- a/data/cards/15291624.yaml
+++ b/data/cards/15291624.yaml
@@ -152,7 +152,7 @@ sets:
     - Ultra Rare
     - Secret Rare
 limit_regulation:
-  tcg: Forbidden
+  tcg: Limited
   ocg: Limited
 yugipedia_page_id: 563480
 master_duel_rarity: UR
