--- a/data/cards/23516703.yaml
+++ b/data/cards/23516703.yaml
@@ -246,7 +246,7 @@ sets:
     - Extra Secret Rare
     - Quarter Century Secret Rare
 limit_regulation:
-  tcg: Unlimited
+  tcg: Forbidden
   ocg: Unlimited
 yugipedia_page_id: 83654
 master_duel_rarity: SR
