--- a/data/cards/28985331.yaml
+++ b/data/cards/28985331.yaml
@@ -293,7 +293,7 @@ sets:
     - Secret Rare
     - Extra Secret Rare
 limit_regulation:
-  tcg: Limited
+  tcg: Semi-Limited
   ocg: Unlimited
 yugipedia_page_id: 73951
 master_duel_rarity: SR
