--- a/data/cards/31178212.yaml
+++ b/data/cards/31178212.yaml
@@ -121,7 +121,7 @@ sets:
     rarities:
     - Rare
 limit_regulation:
-  tcg: Forbidden
+  tcg: Limited
   ocg: Forbidden
 yugipedia_page_id: 357214
 master_duel_rarity: SR
