--- a/data/cards/55584558.yaml
+++ b/data/cards/55584558.yaml
@@ -107,7 +107,7 @@ sets:
     - Common
     - Normal Parallel Rare
 limit_regulation:
-  tcg: Limited
+  tcg: Semi-Limited
   ocg: Semi-Limited
 yugipedia_page_id: 716332
 master_duel_rarity: R
