--- a/data/cards/57835716.yaml
+++ b/data/cards/57835716.yaml
@@ -107,7 +107,7 @@ sets:
     rarities:
     - Super Rare
 limit_regulation:
-  tcg: Limited
+  tcg: Unlimited
   ocg: Unlimited
 yugipedia_page_id: 566068
 master_duel_rarity: R
