--- a/data/cards/58921041.yaml
+++ b/data/cards/58921041.yaml
@@ -293,7 +293,7 @@ sets:
     - Secret Rare
     - Collector's Rare
 limit_regulation:
-  tcg: Unlimited
+  tcg: Limited
   ocg: Unlimited
 yugipedia_page_id: 55
 master_duel_rarity: SR
