--- a/data/cards/63166095.yaml
+++ b/data/cards/63166095.yaml
@@ -206,7 +206,7 @@ sets:
     - Secret Rare
     - Extra Secret Rare
 limit_regulation:
-  tcg: Semi-Limited
+  tcg: Unlimited
   ocg: Unlimited
 yugipedia_page_id: 552508
 master_duel_rarity: UR
