--- a/data/cards/81275020.yaml
+++ b/data/cards/81275020.yaml
@@ -181,7 +181,7 @@ sets:
     rarities:
     - Common
 limit_regulation:
-  tcg: Semi-Limited
+  tcg: Unlimited
   ocg: Limited
 yugipedia_page_id: 354904
 master_duel_rarity: SR
