--- a/data/cards/84815190.yaml
+++ b/data/cards/84815190.yaml
@@ -206,7 +206,7 @@ sets:
     - Extra Secret Rare
     - Quarter Century Secret Rare
 limit_regulation:
-  tcg: Unlimited
+  tcg: Forbidden
   ocg: Unlimited
 yugipedia_page_id: 713459
 master_duel_rarity: UR
