--- a/data/rush/18646.yaml
+++ b/data/rush/18646.yaml
@@ -28,7 +28,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Send the top card of your Deck to the Graveyard. You take no battle damage this turn. Then, if your LP are 3000 or higher, take 2000 damage.
+    Send the top card of your Deck to the Graveyard. This turn, you take no battle damage. Then, if your LP are 3000 or higher, you take 2000 damage.
   de:
   es:
   fr:
@@ -56,9 +56,4 @@ sets:
     set_name: 'Deck Mod Pack: Double Star of the Assault!!'
     rarities:
     - Rare
-is_translation_unofficial:
-  name:
-    en: true
-  text:
-    en: true
 yugipedia_page_id: 714178
