--- a/data/rush/17722.yaml
+++ b/data/rush/17722.yaml
@@ -1,6 +1,6 @@
 konami_id: 17722
 name:
-  en: Imptailing Crisis
+  en: Combustion Crisis
   de:
   es:
   fr:
@@ -28,7 +28,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Inflict 600 damage to your opponent. Then, if your opponent has 2 or more face-up Level 7 monsters on their field, you can shuffle 1 monster from your opponent's field into the owner's Deck.
+    Inflict 600 damage to your opponent. Then, if your opponent has 2 or more face-up Level 7 monsters on their field, you can shuffle 1 monster on your opponent's field into the Deck.
   de:
   es:
   fr:
@@ -44,7 +44,7 @@ card_type: Trap
 property: Normal
 images:
 - index: 1
-  image: ImptailingCrisis-RDMRP1-JP-UR.png
+  image: CombustionCrisis-RDMRP1-JP-UR.png
 sets:
   ja:
   - set_number: RD/MRP1-JP098
@@ -61,9 +61,4 @@ sets:
     rarities:
     - Common
     - Secret Rare
-is_translation_unofficial:
-  name:
-    en: true
-  text:
-    en: true
 yugipedia_page_id: 715403
