--- a/rush.yaml
+++ b/rush.yaml
@@ -71778,7 +71778,7 @@ yugipedia_page_id: 717180
 ---
 konami_id: 17722
 name:
-  en: Imptailing Crisis
+  en: Combustion Crisis
   de:
   es:
   fr:
@@ -71806,7 +71806,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Inflict 600 damage to your opponent. Then, if your opponent has 2 or more face-up Level 7 monsters on their field, you can shuffle 1 monster from your opponent's field into the owner's Deck.
+    Inflict 600 damage to your opponent. Then, if your opponent has 2 or more face-up Level 7 monsters on their field, you can shuffle 1 monster on your opponent's field into the Deck.
   de:
   es:
   fr:
@@ -71822,7 +71822,7 @@ card_type: Trap
 property: Normal
 images:
 - index: 1
-  image: ImptailingCrisis-RDMRP1-JP-UR.png
+  image: CombustionCrisis-RDMRP1-JP-UR.png
 sets:
   ja:
   - set_number: RD/MRP1-JP098
@@ -71839,11 +71839,6 @@ sets:
     rarities:
     - Common
     - Secret Rare
-is_translation_unofficial:
-  name:
-    en: true
-  text:
-    en: true
 yugipedia_page_id: 715403
 ---
 konami_id: 17723
@@ -96419,7 +96414,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Send the top card of your Deck to the Graveyard. You take no battle damage this turn. Then, if your LP are 3000 or higher, take 2000 damage.
+    Send the top card of your Deck to the Graveyard. This turn, you take no battle damage. Then, if your LP are 3000 or higher, you take 2000 damage.
   de:
   es:
   fr:
@@ -96447,11 +96442,6 @@ sets:
     set_name: 'Deck Mod Pack: Double Star of the Assault!!'
     rarities:
     - Rare
-is_translation_unofficial:
-  name:
-    en: true
-  text:
-    en: true
 yugipedia_page_id: 714178
 ---
 konami_id: 18647
