--- a/data/cards/02333466.yaml
+++ b/data/cards/02333466.yaml
@@ -6,7 +6,7 @@ name:
   es:
   fr:
   it:
-  pt:
+  pt: Gandora-G, o Dragão da Destruição
   ja: <ruby>破<rt>は</rt></ruby><ruby>壊<rt>かい</rt></ruby><ruby>竜<rt>りゅう</rt></ruby>ガンドラ<ruby>Ｇ<rt>ギアス</rt></ruby>
   ja_romaji: Hakairyū Gandora Giasu
   ko: 파괴룡 간드라G
@@ -20,7 +20,8 @@ text:
   es:
   fr:
   it:
-  pt:
+  pt: |-
+    Ganha 300 de ATK para cada card banido. Você só pode usar cada um dos seguintes efeitos de "Gandora-G, o Dragão da Destruição" uma vez por turno. Se você controlar "Sarcófago Brilhante": você pode Invocar este card por Invocação-Especial da sua mão. Você pode pagar metade dos seus PV; destrua tantos outros cards no campo quanto possível e, se isso acontecer, bana-os e, depois, Invoque por Invocação-Especial do seu Deck 1 monstro de Nível 7 ou menos que mencione "Sarcófago Brilhante" e aumente o Nível dele pelo número de cards destruídos por este efeito.
   ja: |-
     このカード名の①③の効果はそれぞれ１ターンに１度しか使用できない。①：自分フィールドに「光の黄金櫃」が存在する場合に発動できる。このカードを手札から特殊召喚する。②：このカードの攻撃力は、除外状態のカードの数×３００アップする。③：ＬＰを半分払って発動できる。フィールドの他のカードを全て破壊し除外する。その後、デッキから「光の黄金櫃」のカード名が記されたレベル７以下のモンスター１体を特殊召喚する。この効果で特殊召喚したモンスターのレベルは、この効果で破壊したカードの数だけ上がる。
   ko: |-
