--- a/data/cards/10804018.yaml
+++ b/data/cards/10804018.yaml
@@ -6,7 +6,7 @@ name:
   es:
   fr:
   it:
-  pt:
+  pt: Saffira, o Dragão Divino da Voz Sem Voz
   ja: <ruby>粛<rt>しゅく</rt></ruby><ruby>声<rt>せい</rt></ruby>なる<ruby>竜<rt>りゅう</rt></ruby><ruby>神<rt>しん</rt></ruby>サフィラ
   ja_romaji: Shukuseinaru Ryūshin Safira
   ko: 순성한 용신 사피라
@@ -20,7 +20,8 @@ text:
   es:
   fr:
   it:
-  pt:
+  pt: |-
+    Você pode Invocar este card por Invocação-Ritual com "Bênção da Voz Sem Voz". Se este card for Invocado por Invocação-Ritual enquanto você tiver "Lo, as Orações da Voz Sem Voz" no seu campo ou no seu Cemitério: você pode comprar 2 cards e, depois, descartar 1 card. Quando um ataque for declarado envolvendo um Monstro de Ritual de LUZ (Guerreiro ou Dragão): você pode descartar 1 card aleatório da mão do seu oponente. Durante a Fase Final do seu oponente: você pode adicionar 1 monstro de LUZ do seu Cemitério à sua mão. Você só pode usar cada efeito de "Saffira, o Dragão Divino da Voz Sem Voz" uma vez por turno.
   ja: |-
     「粛声なる祝福」により降臨
     このカード名の①②③の効果はそれぞれ１ターンに１度しか使用できない。①：このカードが儀式召喚した場合、自分のフィールドか墓地に「粛声の祈り手ロー」が存在すれば発動できる。自分は２枚ドローする。その後、自分の手札を１枚選んで捨てる。②：戦士族・ドラゴン族で光属性の儀式モンスターが戦闘を行う攻撃宣言時に発動できる。相手の手札をランダムに１枚捨てる。③：相手エンドフェイズに発動できる。自分の墓地から光属性モンスター１体を手札に加える。
