--- a/data/cards/19181420.yaml
+++ b/data/cards/19181420.yaml
@@ -6,7 +6,7 @@ name:
   es:
   fr:
   it:
-  pt:
+  pt: Dragão Gêmeo Mementotlan
   ja: メメント・ツイン・ドラゴン
   ja_romaji: Memento Tsuin Doragon
   ko: 메멘토 트윈 드래곤
@@ -21,7 +21,9 @@ text:
   es:
   fr:
   it:
-  pt:
+  pt: |-
+    2 monstros "Memento"
+    Qualquer monstro destruído em batalha com um dos seus monstros "Memento" é banido. Você só pode usar cada um dos seguintes efeitos de "Dragão Gêmeo Mementotlan" uma vez por turno. Se este card for Invocado por Invocação-Fusão: você pode destruir 1 monstro "Memento" na sua mão ou no campo com a face para cima e, se isso acontecer, adicione até 2 monstros "Memento" com nomes diferentes do seu Deck à sua mão. Se este card Invocado por Invocação-Fusão for destruído: você pode Invocar por Invocação-Especial 1 monstro "Memento" de Nível 6 ou menos do seu Cemitério.
   ja: |-
     「メメント」モンスター×２
     このカード名の①③の効果はそれぞれ１ターンに１度しか使用できない。①：このカードが融合召喚した場合に発動できる。自分の手札・フィールド（表側表示）の「メメント」モンスター１体を破壊し、デッキから「メメント」モンスターを２体まで手札に加える（同名カードは１枚まで）。②：自分の「メメント」モンスターが戦闘で破壊したモンスターは墓地へは行かず除外される。③：融合召喚したこのカードが破壊された場合に発動できる。自分の墓地からレベル６以下の「メメント」モンスター１体を特殊召喚する。
