--- a/data/cards/22970795.yaml
+++ b/data/cards/22970795.yaml
@@ -6,7 +6,7 @@ name:
   es:
   fr:
   it:
-  pt:
+  pt: Senhor Inumano
   ja: ワイトロード
   ja_romaji: Waitorōdo
   ko: 저주받은 하인 로드
@@ -20,7 +20,8 @@ text:
   es:
   fr:
   it:
-  pt:
+  pt: |-
+    O nome deste card se torna "Servo Caveira" enquanto estiver no Cemitério. Você só pode usar cada um dos seguintes efeitos de "Senhor Inumano" uma vez por turno. Se você tiver "Servo Caveira" ou "Rei dos Servos Caveira" no seu Cemitério: você pode enviar este card da sua mão ou do campo para o Cemitério; envie cards do topo do seu Deck para o Cemitério, até o número de "Servo Caveira" e "Rei dos Servos Caveira" no seu Cemitério. Você pode banir este card do seu Cemitério e, depois, escolha 1 "Servo Caveira" ou "Rei dos Servos Caveira" no seu Cemitério; Invoque-o por Invocação-Especial.
   ja: |-
     このカード名の②③の効果はそれぞれ１ターンに１度しか使用できない。①：このカードのカード名は、墓地に存在する限り「ワイト」として扱う。②：自分の墓地に「ワイト」か「ワイトキング」が存在する場合、手札・フィールドのこのカードを墓地へ送って発動できる。自分の墓地の「ワイト」「ワイトキング」の数まで、自分のデッキの上からカードを墓地へ送る。③：墓地のこのカードを除外し、自分の墓地の、「ワイト」か「ワイトキング」１体を対象として発動できる。そのモンスターを特殊召喚する。
   ko: |-
