--- a/data/cards/23093373.yaml
+++ b/data/cards/23093373.yaml
@@ -6,7 +6,7 @@ name:
   es:
   fr:
   it:
-  pt:
+  pt: Selettrice Vaalmônica
   ja: <ruby>天魔の聲選姫<rt>セレトリーチェ・ヴァルモニカ</rt></ruby>
   ja_romaji: Seretorīche Varumonika
   ko: 셀레트리체 바르모니카
@@ -20,7 +20,8 @@ text:
   es:
   fr:
   it:
-  pt:
+  pt: |-
+    Enquanto você controlar um monstro, exceto "Selettrice Vaalmônica", os monstros do seu oponente não podem escolher este card como alvo de ataques. Você só pode usar cada um dos seguintes efeitos de "Selettrice Vaalmônica" uma vez por turno. Se este card for Invocado por Invocação-Normal ou Pêndulo: você pode adicionar 1 card "Vaalmônica" do seu Deck à sua mão, exceto "Selettrice Vaalmônica". Se este card for enviado para o Cemitério e você tiver 2 cards "Vaalmônica" nas suas Zonas de Pêndulo: você pode adicionar este card à sua mão.
   ja: |-
     このカード名の①③の効果はそれぞれ１ターンに１度しか使用できない。①：このカードが召喚・Ｐ召喚した場合に発動できる。デッキから「天魔の聲選姫」以外の「ヴァルモニカ」カード１枚を手札に加える。②：自分フィールドに「天魔の聲選姫」以外のモンスターが存在する限り、相手モンスターはこのカードを攻撃対象に選択できない。③：このカードが墓地へ送られた場合、自分のＰゾーンに「ヴァルモニカ」カードが２枚存在していれば発動できる。このカードを手札に加える。
   ko: |-
