--- a/data/cards/24215921.yaml
+++ b/data/cards/24215921.yaml
@@ -6,7 +6,7 @@ name:
   es:
   fr:
   it:
-  pt:
+  pt: Horrível Serpeador do Túmulo
   ja: ヘルグレイブ・スクワーマー
   ja_romaji: Herugureibu Sukuwāmā
   ko: 헬그레이브 스쿼머
@@ -20,7 +20,8 @@ text:
   es:
   fr:
   it:
-  pt:
+  pt: |-
+    Se você controlar um monstro Demônio (Efeito Rápido): você pode Invocar este card por Invocação-Especial da sua mão e, depois, você pode destruir 1 "Yubel", ou 1 monstro que o mencione, na sua Zona de Monstros. Você pode banir este card do seu Cemitério; Invoque por Invocação-Especial 1 monstro Demônio com 0 de ATK/DEF da sua mão ou do Cemitério, exceto "Horrível Serpeador do Túmulo". Você só pode usar cada efeito de "Horrível Serpeador do Túmulo" uma vez por turno.
   ja: |-
     このカード名の①②の効果はそれぞれ１ターンに１度しか使用できない。①：自分・相手ターンに、自分フィールドに悪魔族モンスターが存在する場合に発動できる。このカードを手札から特殊召喚する。その後、自分フィールドの、「ユベル」またはそのカード名が記されたモンスター１体を破壊できる。②：墓地のこのカードを除外して発動できる。自分の手札・墓地から「ヘルグレイブ・スクワーマー」以外の攻撃力と守備力が０の悪魔族モンスター１体を特殊召喚する。
   ko: |-
