--- a/data/cards/26548709.yaml
+++ b/data/cards/26548709.yaml
@@ -6,7 +6,7 @@ name:
   es:
   fr:
   it:
-  pt:
+  pt: Besouro Samurai Ragnaraika
   ja: <ruby>蕾禍<rt>ライカ</rt></ruby>ノ<ruby>矢筈天牛<rt>ヤハズカミキリ</rt></ruby>
   ja_romaji: Raika no Yahazu Kamikiri
   ko: 뇌화의 야하즈카미키리
@@ -20,7 +20,8 @@ text:
   es:
   fr:
   it:
-  pt:
+  pt: |-
+    Você pode Invocar este card por Invocação-Especial (da sua mão) ao colocar 1 dos seus monstros Inseto, Planta ou Réptil que estiverem banidos no fundo do seu Deck Principal. Você só pode Invocar "Besouro Samurai Ragnaraika" por Invocação-Especial uma vez por turno desta forma. Se este card for enviado para o Cemitério como matéria para um Monstro Link "Ragnaraika": você pode escolher 1 monstro Inseto, Planta ou Réptil de Nível 4 ou menos no seu Cemitério, exceto "Besouro Samurai Ragnaraika"; Invoque-o por Invocação-Especial em Posição de Defesa. Você só pode usar este efeito de "Besouro Samurai Ragnaraika" uma vez por turno.
   ja: |-
     このカード名の、①の方法による特殊召喚は１ターンに１度しかできず、②の効果は１ターンに１度しか使用できない。①：このカードは自分の除外状態の昆虫族・植物族・爬虫類族モンスター１体をデッキの一番下に戻し、手札から特殊召喚できる。②：このカードが「蕾禍」ＬモンスターのＬ素材として墓地へ送られた場合、「蕾禍ノ矢筈天牛」を除く、自分の墓地のレベル４以下の昆虫族・植物族・爬虫類族モンスター１体を対象として発動できる。そのモンスターを守備表示で特殊召喚する。
   ko: |-
