--- a/data/cards/27260347.yaml
+++ b/data/cards/27260347.yaml
@@ -6,7 +6,7 @@ name:
   es:
   fr:
   it:
-  pt:
+  pt: Diabellstar Olho de Cobra
   ja: <ruby>蛇眼の大炎魔<rt>スネークアイズ・ディアベルスター</rt></ruby>
   ja_romaji: Sunēkuaizu Diaberusutā
   ko: 스네이크아이즈 디아벨스타
@@ -20,7 +20,8 @@ text:
   es:
   fr:
   it:
-  pt:
+  pt: |-
+    Quando um ataque for declarado envolvendo este card e um monstro do oponente: você pode colocar este card do campo e esse monstro do oponente com a face para cima nas Zonas de Magias & Armadilhas dos seus donos como Magias Contínuas. Enquanto este card for uma Magia Contínua: você pode escolher 1 monstro de FOGO no seu Cemitério, exceto "Diabellstar Olho de Cobra"; coloque-o com a face para cima na Zona de Magias & Armadilhas do seu dono como uma Magia Contínua e, se isso acontecer, Invoque este card por Invocação-Especial. Você só pode usar cada efeito de "Diabellstar Olho de Cobra" uma vez por turno.
   ja: |-
     このカード名の①②の効果はそれぞれ１ターンに１度しか使用できない。①：このカードが相手モンスターと戦闘を行う攻撃宣言時に発動できる。その相手モンスターとこのカードをそれぞれ永続魔法カード扱いで元々の持ち主の魔法＆罠ゾーンに表側表示で置く。②：このカードが永続魔法カード扱いの場合、「蛇眼の大炎魔」以外の自分の墓地の炎属性モンスター１体を対象として発動できる。そのモンスターを永続魔法カード扱いで元々の持ち主の魔法＆罠ゾーンに表側表示で置き、このカードを特殊召喚する。
   ko: |-
