--- a/data/cards/39931513.yaml
+++ b/data/cards/39931513.yaml
@@ -6,7 +6,7 @@ name:
   es:
   fr:
   it:
-  pt:
+  pt: Dragão Tenpai Paidra
   ja: <ruby>天<rt>てん</rt></ruby><ruby>盃<rt>ぱい</rt></ruby><ruby>龍<rt>りゅう</rt></ruby>パイドラ
   ja_romaji: Tenpairyū Paidora
   ko: 천배룡 파이도라
@@ -20,7 +20,8 @@ text:
   es:
   fr:
   it:
-  pt:
+  pt: |-
+    Se este card for Invocado por Invocação-Normal ou Especial: você pode adicionar à sua mão ou Baixar 1 Magia/Armadilha "Sangen" do seu Deck. Você só pode usar este efeito de "Dragão Tenpai Paidra" uma vez por turno. Você não sofre dano de batalha das batalhas envolvendo seus monstros Dragão de FOGO. Uma vez por turno, durante a Fase de Batalha, você pode (Efeito Rápido): imediatamente depois que este efeito resolver, Invocar por Invocação-Sincro usando este card que você controla.
   ja: |-
     このカード名の①の効果は１ターンに１度しか使用できない。①：このカードが召喚・特殊召喚した場合に発動できる。デッキから「燦幻」魔法・罠カード１枚を選び、手札に加えるか自分フィールドにセットする。②：このカードがモンスターゾーンに存在する限り、自分のドラゴン族・炎属性モンスターの戦闘で発生する自分への戦闘ダメージは０になる。③：１ターンに１度、自分・相手のバトルフェイズに発動できる。このカードを含む自分フィールドのモンスターを素材としてＳ召喚を行う。
   ko: |-
