--- a/data/cards/53765052.yaml
+++ b/data/cards/53765052.yaml
@@ -6,7 +6,7 @@ name:
   es:
   fr:
   it:
-  pt:
+  pt: Diabellze, a Protetora do Pecado Original
   ja: <ruby>原<rt>げん</rt></ruby><ruby>罪<rt>ざい</rt></ruby>のディアベルゼ
   ja_romaji: Genzai no Diaberuze
   ko: 원죄의 디아벨제
@@ -20,7 +20,8 @@ text:
   es:
   fr:
   it:
-  pt:
+  pt: |-
+    Se um card "Despojos do Pecado" estiver no Cemitério de qualquer duelista, você pode Invocar este card por Invocação-Especial (da sua mão). Você só pode Invocar "Diabellze, a Protetora do Pecado Original" por Invocação-Especial uma vez por turno desta forma. Seu oponente deve Baixar Cards de Magia/Armadilha antes de ativá-los. Se uma Magia/Armadilha se tornar Baixada no campo, enquanto este card estiver na Zona de Monstros (exceto durante a Etapa de Dano): você pode escolher 1 card que você controla e 1 card que seu oponente controla; destrua-os. Você só pode usar este efeito de "Diabellze, a Protetora do Pecado Original" uma vez por turno.
   ja: |-
     このカード名の、①の方法による特殊召喚は１ターンに１度しかできず、③の効果は１ターンに１度しか使用できない。①：自分か相手の墓地に「罪宝」カードが存在する場合、このカードは手札から特殊召喚できる。②：このカードがモンスターゾーンに存在する限り、相手はセットされていない魔法・罠カードを発動できない。③：このカードがモンスターゾーンに存在する状態で、フィールドに魔法・罠カードがセットされた場合、自分及び相手フィールドのカードを１枚ずつ対象として発動できる。そのカードを破壊する。
   ko: |-
