--- a/data/cards/56208713.yaml
+++ b/data/cards/56208713.yaml
@@ -6,7 +6,7 @@ name:
   es:
   fr:
   it:
-  pt:
+  pt: Bacha, a Maestra Melodiosa
   ja: <ruby>幻<rt>げん</rt></ruby><ruby>奏<rt>そう</rt></ruby>の<ruby>音<rt>おと</rt></ruby><ruby>姫<rt>ひめ</rt></ruby>スペクタキュラー・バッハ
   ja_romaji: Gensō no Otohime Supekutakyurā Bahha
   ko: 환주의 음희 스펙타큘러 바흐
@@ -21,7 +21,9 @@ text:
   es:
   fr:
   it:
-  pt:
+  pt: |-
+    2 monstros "Melodiosa(o)"
+    Enquanto você controlar este card Invocado por Invocação-Fusão, os efeitos ativados dos seus Monstros de Fusão "Melodiosa(o)" não podem ser negados. Você só pode usar cada um dos seguintes efeitos de "Bacha, a Maestra Melodiosa" uma vez por turno. Se este card for Invocado por Invocação-Especial: você pode Invocar por Invocação-Especial 1 monstro "Melodiosa(o)" do seu Deck. Se este card for enviado para o Cemitério: você pode escolher 1 monstro "Melodiosa(o)" no seu Cemitério, exceto "Bacha, a Maestra Melodiosa"; Invoque-o por Invocação-Especial em Posição de Defesa.
   ja: |-
     「幻奏」モンスター×２
     このカード名の①③の効果はそれぞれ１ターンに１度しか使用できない。①：このカードが特殊召喚した場合に発動できる。デッキから「幻奏」モンスター１体を特殊召喚する。②：融合召喚したこのカードがモンスターゾーンに存在する限り、自分の「幻奏」融合モンスターが発動した効果は無効化されない。③：このカードが墓地へ送られた場合、「幻奏の音姫スペクタキュラー・バッハ」以外の自分の墓地の「幻奏」モンスター１体を対象として発動できる。そのモンスターを守備表示で特殊召喚する。
