--- a/data/cards/59369430.yaml
+++ b/data/cards/59369430.yaml
@@ -6,7 +6,7 @@ name:
   es:
   fr:
   it:
-  pt:
+  pt: Gargóleo, o Esmagador Sísmico de Aço
   ja: <ruby>鋼<rt>こう</rt></ruby><ruby>鉄<rt>てつ</rt></ruby>の<ruby>大<rt>だい</rt></ruby><ruby>魔<rt>ま</rt></ruby><ruby>人<rt>じん</rt></ruby>ゴルゴイル
   ja_romaji: Kōtetsu no Daimajin Gorugoiru
   ko: 강철의 대마인 골고일
@@ -20,7 +20,8 @@ text:
   es:
   fr:
   it:
-  pt:
+  pt: |-
+    Se este card batalhar um monstro, nenhum dos dois pode ser destruído nessa batalha. Você só pode usar cada um dos seguintes efeitos de "Gargóleo, o Esmagador Sísmico de Aço" uma vez por turno. Depois do cálculo de dano, se um dos seus monstros Máquina ou Ilusão batalharam: você pode escolher 1 dos seus monstros que estiverem banidos ou no seu Cemitério; Invoque-o por Invocação-Especial. Se este card for banido do campo: você pode Invocá-lo por Invocação-Especial.
   ja: |-
     このカード名の②③の効果はそれぞれ１ターンに１度しか使用できない。①：このカードがモンスターと戦闘を行う場合、その２体はその戦闘では破壊されない。②：自分の機械族・幻想魔族モンスターが戦闘を行ったダメージ計算後、自分の墓地・除外状態のモンスター１体を対象として発動できる。そのモンスターを特殊召喚する。③：このカードがフィールドから除外された場合に発動できる。このカードを特殊召喚する。
   ko: |-
