--- a/data/cards/83793721.yaml
+++ b/data/cards/83793721.yaml
@@ -6,7 +6,7 @@ name:
   es:
   fr:
   it:
-  pt:
+  pt: Etoile Florida, a Magnificat Melodiosa
   ja: <ruby>幻<rt>げん</rt></ruby><ruby>奏<rt>そう</rt></ruby>の<ruby>華<rt>はな</rt></ruby><ruby>歌<rt>か</rt></ruby><ruby>神<rt>しん</rt></ruby>フラワリング・エトワール
   ja_romaji: Gensō no Hanakashin Furawaringu Etowāru
   ko: 환주의 화가신 플라워링 에뜨와르
@@ -21,7 +21,9 @@ text:
   es:
   fr:
   it:
-  pt:
+  pt: |-
+    1 monstro "Maestra Melodiosa" + 2 monstros "Melodiosa(o)"
+    (Efeito Rápido): você pode banir (até a Fase Final) qualquer número de monstros "Melodiosa(o)" que você controla e, depois, você pode devolver para a mão até esse número de cards com a face para cima que seu oponente controla. Você só pode usar este efeito de "Etoile Florida, a Magnificat Melodiosa" uma vez por turno. Se este card com a face para cima Invocado por Invocação-Fusão sob o controle do seu dono deixar o campo devido a um card do oponente: você pode Invocar por Invocação-Especial 1 monstro "Melodiosa(o)" do seu Deck ou Deck Adicional, exceto "Etoile Florida, a Magnificat Melodiosa".
   ja: |-
     「幻奏の音姫」モンスター＋「幻奏」モンスター×２
     このカード名の①の効果は１ターンに１度しか使用できない。①：自分・相手ターンに発動できる。自分フィールドの「幻奏」モンスターを任意の数だけエンドフェイズまで除外する。その後、この効果で除外したモンスターの数まで相手フィールドの表側表示カードを手札に戻す事ができる。②：融合召喚した表側表示のこのカードが相手によってフィールドから離れた場合に発動できる。デッキ・ＥＸデッキから「幻奏の華歌神フラワリング・エトワール」以外の「幻奏」モンスター１体を特殊召喚する。
