--- a/data/cards/84631951.yaml
+++ b/data/cards/84631951.yaml
@@ -6,7 +6,7 @@ name:
   es:
   fr:
   it:
-  pt:
+  pt: Dinovatus Docus
   ja: ディノベーダー・ドクス
   ja_romaji: Dinobēdā Dokusu
   ko: 디노베이더 도쿠스
@@ -20,7 +20,8 @@ text:
   es:
   fr:
   it:
-  pt:
+  pt: |-
+    Você só pode Invocar um ou mais "Dinovatus Docus" por Invocação-Especial uma vez por turno. Se você controlar 2 ou mais monstros Dinossauro: você pode Invocar este card por Invocação-Especial da sua mão. Você pode oferecer como Tributo 1 monstro de Nível 4 ou menos; Invoque por Invocação-Especial 1 monstro Dinossauro do seu Deck que seja 2 Níveis maior ou menor que o monstro oferecido como Tributo tinha no campo, mas destrua-o durante a Fase Final. Você só pode usar este efeito de "Dinovatus Docus" uma vez por turno.
   ja: |-
     自分は「ディノベーダー・ドクス」を１ターンに１度しか特殊召喚できず、その②の効果は１ターンに１度しか使用できない。①：自分フィールドに恐竜族モンスターが２体以上存在する場合に発動できる。このカードを手札から特殊召喚する。②：自分フィールドのレベル４以下のモンスター１体をリリースして発動できる。リリースしたモンスターよりレベルが２つ高いか２つ低い恐竜族モンスター１体をデッキから特殊召喚する。この効果で特殊召喚したモンスターはエンドフェイズに破壊される。
   ko: |-
