--- a/data/cards/85753549.yaml
+++ b/data/cards/85753549.yaml
@@ -6,7 +6,7 @@ name:
   es:
   fr:
   it:
-  pt:
+  pt: Mikazukinoyaiba, o Dragão Presa da Lua
   ja: <ruby>月<rt>げつ</rt></ruby><ruby>牙<rt>が</rt></ruby><ruby>龍<rt>りゅう</rt></ruby>－クレセント・ドラゴン
   ja_romaji: Getsugaryū - Kuresento Doragon
   ko: 월아룡－크레센트 드래곤
@@ -20,7 +20,8 @@ text:
   es:
   fr:
   it:
-  pt:
+  pt: |-
+    Durante a Fase Final, se este card estiver na sua mão ou no Cemitério: você pode Invocá-lo por Invocação-Especial, mas coloque-o no fundo do Deck quando ele deixar o campo. Você pode descartar 1 card; adicione 1 monstro Dragão de TREVAS de Nível 7 do seu Deck à sua mão. Você só pode usar cada efeito de "Mikazukinoyaiba, o Dragão Presa da Lua" uma vez por turno.
   ja: |-
     このカード名の①②の効果はそれぞれ１ターンに１度しか使用できない。①：このカードが手札・墓地に存在する場合、自分・相手のエンドフェイズに発動できる。このカードを特殊召喚する。この効果で特殊召喚したこのカードは、フィールドから離れた場合にデッキの一番下に戻る。②：手札を１枚捨てて発動できる。デッキからドラゴン族・闇属性・レベル７モンスター１体を手札に加える。
   ko: |-
