--- a/data/cards/90276649.yaml
+++ b/data/cards/90276649.yaml
@@ -6,7 +6,7 @@ name:
   es:
   fr:
   it:
-  pt:
+  pt: Dística, a Cantora Melodiosa
   ja: <ruby>幻<rt>げん</rt></ruby><ruby>奏<rt>そう</rt></ruby>の<ruby>歌<rt>うた</rt></ruby><ruby>姫<rt>ひめ</rt></ruby>クープレ
   ja_romaji: Gensō no Utahime Kūpure
   ko: 환주의 가희 쿠플레
@@ -20,7 +20,8 @@ text:
   es:
   fr:
   it:
-  pt:
+  pt: |-
+    Se este card for adicionado à sua mão, exceto ao comprá-lo em sua compra normal: você pode revelar este card; Invoque por Invocação-Especial 1 monstro "Melodiosa(o)" de Nível 4 ou menos da sua mão ou do Cemitério. Se um ou mais Monstros de Fusão "Melodiosa(o)" forem Invocados por Invocação-Especial no seu campo, enquanto este card estiver com a face para cima no seu Deck Adicional (exceto durante a Etapa de Dano): você pode colocar este card na sua Zona de Pêndulo. Você só pode usar cada efeito de "Dística, a Cantora Melodiosa" uma vez por turno.
   ja: |-
     このカード名の①②のモンスター効果はそれぞれ１ターンに１度しか使用できない。①：このカードが通常のドロー以外の方法で手札に加わった場合、このカードを相手に見せて発動できる。自分の手札・墓地からレベル４以下の「幻奏」モンスター１体を特殊召喚する。②：このカードがＥＸデッキに表側で存在する状態で、自分フィールドに「幻奏」融合モンスターが特殊召喚された場合に発動できる。このカードを自分のＰゾーンに置く。
   ko: |-
@@ -44,7 +45,8 @@ pendulum_effect:
   es:
   fr:
   it:
-  pt:
+  pt: |-
+    Você não pode Invocar por Invocação-Pêndulo, exceto monstros de LUZ (este efeito não pode ser negado). Se você não controlar nenhum monstro com a face para cima, que não sejam monstros "Melodiosa(o)": você pode adicionar 1 Magia/Armadilha "Melodiosa(o)" do seu Deck à sua mão. Você só pode usar este efeito de "Dística, a Cantora Melodiosa" uma vez por turno.
   ja: |-
     このカード名の②のＰ効果は１ターンに１度しか使用できない。①：自分は光属性モンスターしかＰ召喚できない。この効果は無効化されない。②：自分フィールドに「幻奏」モンスター以外の表側表示モンスターが存在しない場合に発動できる。デッキから「幻奏」魔法・罠カード１枚を手札に加える。
   ko: |-
