--- a/data/cards/91098230.yaml
+++ b/data/cards/91098230.yaml
@@ -6,7 +6,7 @@ name:
   es:
   fr:
   it:
-  pt:
+  pt: Tanqueiro do Mecanismo Antigo
   ja: <ruby>古代の機械戦車兵<rt>アンティーク・ギアタンカー</rt></ruby>
   ja_romaji: Antīku Gia Tankā
   ko: 앤틱 기어 탱커
@@ -20,7 +20,8 @@ text:
   es:
   fr:
   it:
-  pt:
+  pt: |-
+    Se este card for Invocado por Invocação-Normal ou Especial: você pode Invocar por Invocação-Especial 1 monstro "Mecanismo Antigo" da sua mão, exceto "Tanqueiro do Mecanismo Antigo", ignorando suas condições de Invocação ou, se seu oponente controlar um monstro, em vez disso, você pode Invocar por Invocação-Especial do seu Cemitério. Você pode escolher 1 card com a face para cima que você controla; destrua-o e, além disso, pelo resto deste turno, todos os monstros que você controla que forem "Golem do Mecanismo Antigo", ou que o mencionem, ganham 600 de ATK. Você só pode usar cada efeito de "Tanqueiro do Mecanismo Antigo" uma vez por turno.
   ja: |-
     このカード名の①②の効果はそれぞれ１ターンに１度しか使用できない。①：このカードが召喚・特殊召喚した場合に発動できる。手札から「古代の機械戦車兵」以外の「アンティーク・ギア」モンスター１体を召喚条件を無視して特殊召喚する。相手フィールドにモンスターが存在する場合、代わりに自分の墓地から選ぶ事もできる。②：自分フィールドの表側表示カード１枚を対象として発動できる。そのカードを破壊する。このターン中は自分フィールドの「古代の機械巨人」及びそのカード名が記されたモンスターの攻撃力が６００アップする。
   ko: |-
