--- a/data/cards/97698279.yaml
+++ b/data/cards/97698279.yaml
@@ -6,7 +6,7 @@ name:
   es:
   fr:
   it:
-  pt:
+  pt: Centur-Ião Gárgula II
   ja: <ruby>竜騎兵<rt>センチュリオン</rt></ruby>ガーゴイル<ruby>Ⅱ<rt>ツヴァイ</rt></ruby>
   ja_romaji: Senchurion Gāgoiru Tsuvai
   ko: 센츄리온 가고일Ⅱ
@@ -20,7 +20,8 @@ text:
   es:
   fr:
   it:
-  pt:
+  pt: |-
+    Você pode enviar 1 card "Centur-Ião" com a face para cima que você controla para o Cemitério; Invoque este card por Invocação-Especial da sua mão e, além disso, você não pode Invocar por Invocação-Especial "Centur-Ião Gárgula II" pelo resto deste turno. Se este card for enviado para o Cemitério como Matéria Sincro: você pode adicionar este card à sua mão. Durante a Fase Principal, se este card for uma Armadilha Contínua: você pode Invocar este card por Invocação-Especial e, depois, você pode reduzir o Nível dele em 4. Você só pode usar cada efeito de "Centur-Ião Gárgula II" uma vez por turno.
   ja: |-
     このカード名の①②③の効果はそれぞれ１ターンに１度しか使用できない。①：自分フィールドの表側表示の「センチュリオン」カード１枚を墓地へ送って発動できる。このカードを手札から特殊召喚する。このターン、自分は「竜騎兵ガーゴイルⅡ」を特殊召喚できない。②：このカードがＳ素材として墓地へ送られた場合に発動できる。このカードを手札に加える。③：このカードが永続罠カード扱いの場合、自分・相手のメインフェイズに発動できる。このカードを特殊召喚する。その後、このカードのレベルを４つ下げる事ができる。
   ko: |-
