--- a/data/cards/99153051.yaml
+++ b/data/cards/99153051.yaml
@@ -6,7 +6,7 @@ name:
   es:
   fr:
   it:
-  pt:
+  pt: Ragnaraika, a Semente Maligna
   ja: <ruby>蕾禍<rt>ライカ</rt></ruby>ノ<ruby>毬首<rt>マリコウベ</rt></ruby>
   ja_romaji: Raika no Marikoube
   ko: 뇌화의 마리코베
@@ -20,7 +20,8 @@ text:
   es:
   fr:
   it:
-  pt:
+  pt: |-
+    Você pode Invocar este card por Invocação-Especial (da sua mão) ao enviar 1 monstro Inseto, Planta ou Réptil da sua mão para o Cemitério. Você só pode Invocar "Ragnaraika, a Semente Maligna" por Invocação-Especial uma vez por turno desta forma. Se este card for Invocado por Invocação-Normal ou Especial: você pode adicionar à sua mão até 2 cards "Ragnaraika" diferentes dos seus que estiverem banidos e/ou no seu Deck, exceto "Ragnaraika, a Semente Maligna" e, depois, bana 1 card da sua mão e, além disso, você não pode Invocar por Invocação-Especial pelo resto deste turno, exceto monstros Inseto, Planta ou Réptil. Você só pode usar este efeito de "Ragnaraika, a Semente Maligna" uma vez por turno.
   ja: |-
     このカード名の、①の方法による特殊召喚は１ターンに１度しかできず、②の効果は１ターンに１度しか使用できない。①：このカードは手札の昆虫族・植物族・爬虫類族モンスター１体を墓地へ送り、手札から特殊召喚できる。②：このカードが召喚・特殊召喚した場合に発動できる。「蕾禍ノ毬首」以外の自分のデッキ・除外状態の「蕾禍」カードを２枚まで手札に加える（同名カードは１枚まで）。その後、自分の手札を１枚選んで除外する。このターン、自分は昆虫族・植物族・爬虫類族モンスターしか特殊召喚できない。
   ko: |-
