--- a/data/cards/21036656.yaml
+++ b/data/cards/21036656.yaml
@@ -6,7 +6,7 @@ name:
   es:
   fr:
   it:
-  pt:
+  pt: Cyclos, o Duende Circular
   ja: <ruby>円<rt>えん</rt></ruby><ruby>喚<rt>かん</rt></ruby><ruby>妖<rt>よう</rt></ruby><ruby>精<rt>せい</rt></ruby>キクロス
   ja_romaji: Enkanyōsei Kikurosu
   ko: 원환 요정 키클로스
@@ -20,7 +20,8 @@ text:
   es:
   fr:
   it:
-  pt:
+  pt: |-
+    Se este card for Invocado por Invocação-Normal ou Especial: você pode descartar 1 card; adicione 1 Regulador Inseto ou Planta do seu Deck à sua mão, exceto "Cyclos, o Duende Circular". Se um ou mais Monstros Sincro Inseto ou Planta forem Invocados por Invocação-Especial, enquanto este card estiver no seu Cemitério (exceto durante a Etapa de Dano): você pode Invocar este card por Invocação-Especial, mas bana-o quando ele deixar o campo. Você só pode usar cada efeito de "Cyclos, o Duende Circular" uma vez por turno.
   ja: |-
     このカード名の①②の効果はそれぞれ１ターンに１度しか使用できない。①：このカードが召喚・特殊召喚した場合、手札を１枚捨てて発動できる。デッキから「円喚妖精キクロス」以外の昆虫族・植物族のチューナー１体を手札に加える。②：このカードが墓地に存在する状態で、昆虫族・植物族Ｓモンスターが特殊召喚された場合に発動できる。このカードを特殊召喚する。この効果で特殊召喚したこのカードは、フィールドから離れた場合に除外される。
   ko: |-
