--- a/data/cards/27483935.yaml
+++ b/data/cards/27483935.yaml
@@ -6,7 +6,7 @@ name:
   es:
   fr:
   it:
-  pt:
+  pt: Comandante do Mecanismo Antigo
   ja: <ruby>古代の機械司令<rt>アンティーク・ギアコマンダー</rt></ruby>
   ja_romaji: Antīku Gia Komandā
   ko: 앤틱 기어 커맨더
@@ -20,7 +20,8 @@ text:
   es:
   fr:
   it:
-  pt:
+  pt: |-
+    Você pode enviar para o Cemitério 1 "Golem do Mecanismo Antigo" da sua mão, do Deck ou da Zona de Monstros com a face para cima; imediatamente depois que este efeito resolver, Invoque por Invocação-Normal 1 monstro "Mecanismo Antigo". Se você Invocar por Invocação-Normal ou Especial "Golem do Mecanismo Antigo" (exceto durante a Etapa de Dano): você pode Invocar por Invocação-Especial 1 "Golem do Mecanismo Antigo" da sua mão ou do Cemitério, ignorando suas condições de Invocação. Você pode banir este card do seu Cemitério; coloque 1 Armadilha Contínua "Mecanismo Antigo" da sua mão, com a face para cima no seu campo. Você só pode usar cada efeito de "Comandante do Mecanismo Antigo" uma vez por turno.
   ja: |-
     このカード名の①②③の効果はそれぞれ１ターンに１度しか使用できない。①：自分の手札・デッキ・フィールド（表側表示）から「古代の機械巨人」１体を墓地へ送って発動できる。「アンティーク・ギア」モンスター１体の召喚を行う。②：自分が「古代の機械巨人」を召喚・特殊召喚した場合に発動できる。自分の手札・墓地から「古代の機械巨人」１体を召喚条件を無視して特殊召喚する。③：墓地のこのカードを除外して発動できる。手札から「アンティーク・ギア」永続罠カード１枚を自分フィールドに表側表示で置く。
   ko: |-
