--- a/data/cards/39321065.yaml
+++ b/data/cards/39321065.yaml
@@ -6,7 +6,7 @@ name:
   es:
   fr:
   it:
-  pt:
+  pt: Espadachim Silencioso Zero
   ja: サイレント・ソードマン・ゼロ
   ja_romaji: Sairento Sōdoman Zero
   ko: 사일런트 스워드맨 제로
@@ -20,7 +20,8 @@ text:
   es:
   fr:
   it:
-  pt:
+  pt: |-
+    Uma vez por turno, durante a Fase de Apoio: aumente em 1 o Nível deste card. Enquanto o Nível deste card for maior que seu Nível original, ele ganha ATK igual à diferença x 500. Quando seu oponente ativar um card ou efeito que escolha como alvo "Sarcófago Brilhante", ou um ou mais monstros que o mencionem, que você controla (Efeito Rápido): você pode negar a ativação e, se isso acontecer, aumente em 1 o Nível deste card. Você só pode usar este efeito de "Espadachim Silencioso Zero" uma vez por turno.
   ja: |-
     このカード名の③の効果は１ターンに１度しか使用できない。①：自分・相手のスタンバイフェイズに発動する。このカードのレベルを１つ上げる。②：このカードのレベルが元々のレベルより高い場合、その差分×５００だけこのカードの攻撃力はアップする。③：自分フィールドの、「光の黄金櫃」またはそのカード名が記されたモンスターを対象とする効果を相手が発動した時に発動できる。その発動を無効にし、このカードのレベルを１つ上げる。
   ko: |-
