--- a/data/cards/57420265.yaml
+++ b/data/cards/57420265.yaml
@@ -6,7 +6,7 @@ name:
   es:
   fr:
   it:
-  pt:
+  pt: Arpoador Peixeborg
   ja: フィッシュボーグ－ハープナー
   ja_romaji: Fisshubōgu - Hāpunā
   ko: 피시보그－하프너
@@ -20,7 +20,8 @@ text:
   es:
   fr:
   it:
-  pt:
+  pt: |-
+    Você pode revelar este card e 1 monstro de ÁGUA na sua mão; Invoque por Invocação-Especial 1 deles e descarte o outro. Você só pode usar este efeito de "Arpoador Peixeborgue" uma vez por turno. Se este card for enviado para o Cemitério como matéria para um Monstro Sincro de ÁGUA: até o final deste turno, você pode negar os efeitos de 1 Monstro de Efeito que seu oponente controla.
   ja: |-
     このカード名の①の効果は１ターンに１度しか使用できない。①：手札のこのカードと手札の水属性モンスター１体を相手に見せて発動できる。その２体の内の１体を特殊召喚し、もう１体を捨てる。②：このカードが水属性ＳモンスターのＳ素材として墓地へ送られた場合に発動できる。相手フィールドの効果モンスター１体の効果をターン終了時まで無効にする。
   ko: |-
