--- a/data/cards/58143852.yaml
+++ b/data/cards/58143852.yaml
@@ -6,7 +6,7 @@ name:
   es:
   fr:
   it:
-  pt:
+  pt: Aprendiz do Pesadelo
   ja: <ruby>幻惑の見習い魔術師<rt>ナイトメア・アプレンティス</rt></ruby>
   ja_romaji: Naitomea Apurentisu
   ko: 나이트메어 어프렌티스
@@ -20,7 +20,8 @@ text:
   es:
   fr:
   it:
-  pt:
+  pt: |-
+    Você pode Invocar este card por Invocação-Especial (da sua mão) ao descartar 1 card. Você só pode Invocar "Aprendiz do Pesadelo" por Invocação-Especial uma vez por turno desta forma. Se este card batalhar um monstro, nenhum dos dois pode ser destruído nessa batalha. Se este card for Invocado por Invocação-Normal ou Especial: você pode adicionar 1 monstro Ilusão do seu Deck à sua mão, exceto "Aprendiz do Pesadelo". Você só pode usar este efeito de "Aprendiz do Pesadelo" uma vez por turno.
   ja: |-
     このカード名の、①の方法による特殊召喚は１ターンに１度しかできず、②の効果は１ターンに１度しか使用できない。①：このカードは手札を１枚捨てて、手札から特殊召喚できる。②：このカードが召喚・特殊召喚した場合に発動できる。「幻惑の見習い魔術師」以外の幻想魔族モンスター１体をデッキから手札に加える。③：このカードがモンスターと戦闘を行う場合、その２体はその戦闘では破壊されない。
   ko: |-
