--- a/data/cards/60203670.yaml
+++ b/data/cards/60203670.yaml
@@ -6,7 +6,7 @@ name:
   es:
   fr:
   it:
-  pt:
+  pt: Orgulho Dourado - Eliminador
   ja: <ruby>ＧＰ<rt>ゴールド・プライド</rt></ruby>－アサシネーター
   ja_romaji: Gōrudo Puraido - Asashinētā
   ko: GP－어쌔시네이터
@@ -20,7 +20,8 @@ text:
   es:
   fr:
   it:
-  pt:
+  pt: |-
+    Se você tiver menos PV que seu oponente: você pode Invocar este card por Invocação-Especial da sua mão. Você pode banir 1 outro monstro "Orgulho Dourado" da sua mão, do campo com a face para cima ou do Cemitério; Invoque por Invocação-Especial 1 "Ficha de Orgulho Dourado" (Máquina/TREVAS/ATK 0/DEF 0) com o mesmo Nível que o desse monstro banido e, além disso, este card não pode ser usado como matéria para uma Invocação-Fusão, Sincro, Xyz ou Link neste turno, exceto por um monstro "Orgulho Dourado". Você só pode usar cada efeito de "Orgulho Dourado - Eliminador" uma vez por turno.
   ja: |-
     このカード名の①②の効果はそれぞれ１ターンに１度しか使用できない。①：自分のＬＰが相手より少ない場合に発動できる。このカードを手札から特殊召喚する。②：自分の手札・フィールド（表側表示）・墓地からこのカード以外の「ＧＰ」モンスター１体を除外して発動できる。除外したモンスターのレベルと同じレベルを持つ「ＧＰトークン」（機械族・闇・攻／守０）１体を自分フィールドに特殊召喚する。このカードはこのターン、融合・Ｓ・Ｘ・Ｌ召喚の素材とする場合、「ＧＰ」モンスターの融合・Ｓ・Ｘ・Ｌ召喚にしか使用できない。
   ko: |-
