--- a/data/cards/64881644.yaml
+++ b/data/cards/64881644.yaml
@@ -6,7 +6,7 @@ name:
   es:
   fr:
   it:
-  pt:
+  pt: Refrão, a Cantora Melodiosa
   ja: <ruby>幻<rt>げん</rt></ruby><ruby>奏<rt>そう</rt></ruby>の<ruby>歌<rt>うた</rt></ruby><ruby>姫<rt>ひめ</rt></ruby>ルフラン
   ja_romaji: Gensō no Utahime Rufuran
   ko: 환주의 가희 르프랭
@@ -20,7 +20,8 @@ text:
   es:
   fr:
   it:
-  pt:
+  pt: |-
+    Se este card for Invocado por Invocação-Normal ou Especial: você pode adicionar 1 monstro "Melodiosa(o)" do seu Deck à sua mão, exceto "Refrão, a Cantora Melodiosa". Se um ou mais Monstros de Fusão "Melodiosa(o)" forem Invocados por Invocação-Especial no seu campo, enquanto este card estiver com a face para cima no seu Deck Adicional (exceto durante a Etapa de Dano): você pode colocar este card na sua Zona de Pêndulo. Você só pode usar cada efeito de "Refrão, a Cantora Melodiosa" uma vez por turno.
   ja: |-
     このカード名の①②のモンスター効果はそれぞれ１ターンに１度しか使用できない。①：このカードが召喚・特殊召喚した場合に発動できる。デッキから「幻奏の歌姫ルフラン」以外の「幻奏」モンスター１体を手札に加える。②：このカードがＥＸデッキに表側で存在する状態で、自分フィールドに「幻奏」融合モンスターが特殊召喚された場合に発動できる。このカードを自分のＰゾーンに置く。
   ko: |-
@@ -44,7 +45,8 @@ pendulum_effect:
   es:
   fr:
   it:
-  pt:
+  pt: |-
+    Você pode escolher 1 Monstro de Fusão "Melodiosa(o)" que você controla; envie 1 monstro "Melodiosa(o)" do seu Deck para o Cemitério e, se isso acontecer, o monstro alvo ganha ATK igual ao Nível desse monstro enviado para o Cemitério x 200 até o final deste turno. Você só pode usar este efeito de "Refrão, a Cantora Melodiosa" uma vez por turno.
   ja: |-
     このカード名のＰ効果は１ターンに１度しか使用できない。①：自分フィールドの「幻奏」融合モンスター１体を対象として発動できる。デッキから「幻奏」モンスター１体を墓地へ送り、対象のモンスターの攻撃力をターン終了時まで、墓地へ送ったモンスターのレベル×２００アップする。
   ko: |-
