--- a/data/cards/65326118.yaml
+++ b/data/cards/65326118.yaml
@@ -6,7 +6,7 @@ name:
   es:
   fr:
   it:
-  pt:
+  pt: Dragão Tenpai Fadra
   ja: <ruby>天<rt>てん</rt></ruby><ruby>盃<rt>ぱい</rt></ruby><ruby>龍<rt>りゅう</rt></ruby>ファドラ
   ja_romaji: Tenpairyū Fadora
   ko: 천배룡 파도라
@@ -20,7 +20,8 @@ text:
   es:
   fr:
   it:
-  pt:
+  pt: |-
+    Se este card for Invocado por Invocação-Normal ou Especial, ou no começo da Etapa de Dano, se um monstro batalhar: você pode escolher 1 monstro Dragão de FOGO de Nível 4 ou menos no seu Cemitério; Invoque-o por Invocação-Especial. Você só pode usar este efeito de "Dragão Tenpai Fadra" uma vez por turno. Seus monstros Dragão de FOGO não podem ser destruídos em batalha. Uma vez por turno, durante a Fase de Batalha, você pode (Efeito Rápido): imediatamente depois que este efeito resolver, Invocar por Invocação-Sincro usando este card que você controla.
   ja: |-
     このカード名の①の効果は１ターンに１度しか使用できない。①：このカードが召喚・特殊召喚した場合、またはモンスターが戦闘を行うダメージステップ開始時、自分の墓地のレベル４以下のドラゴン族・炎属性モンスター１体を対象として発動できる。そのモンスターを特殊召喚する。②：このカードがモンスターゾーンに存在する限り、自分のドラゴン族・炎属性モンスターは戦闘では破壊されない。③：１ターンに１度、自分・相手のバトルフェイズに発動できる。このカードを含む自分フィールドのモンスターを素材としてＳ召喚を行う。
   ko: |-
