--- a/data/cards/92110878.yaml
+++ b/data/cards/92110878.yaml
@@ -6,7 +6,7 @@ name:
   es:
   fr:
   it:
-  pt:
+  pt: Trio de Dispositivos
   ja: トリコロール・ガジェット
   ja_romaji: Torikorōru Gajetto
   ko: 트리콜로르 가제트
@@ -20,7 +20,8 @@ text:
   es:
   fr:
   it:
-  pt:
+  pt: |-
+    Se este card for Invocado por Invocação-Normal ou Especial: você pode adicionar 1 "Sarcófago Brilhante" ou 1 Magia/Armadilha que o mencione do seu Deck à sua mão. Se este card for destruído em batalha ou por um efeito de card: você pode Baixar 1 "Bastião, a Fortaleza Oculta" do seu Deck. Você só pode usar cada efeito de "Trio de Dispositivos" uma vez por turno.
   ja: |-
     このカード名の①②の効果はそれぞれ１ターンに１度しか使用できない。①：このカードが召喚・特殊召喚した場合に発動できる。「光の黄金櫃」またはそのカード名が記された魔法・罠カード１枚をデッキから手札に加える。②：このカードが戦闘・効果で破壊された場合に発動できる。デッキから「隠し砦 ストロング・ホールド」１枚を自分フィールドにセットする。
   ko: |-
