--- a/data/cards/96576187.yaml
+++ b/data/cards/96576187.yaml
@@ -6,7 +6,7 @@ name:
   es:
   fr:
   it:
-  pt:
+  pt: Weiss, a Arquidemônio Luminosa
   ja: ライトロード・デーモン ヴァイス
   ja_romaji: Raitorōdo Dēmon Vaisu
   ko: 라이트로드 데몬 바이스
@@ -20,7 +20,8 @@ text:
   es:
   fr:
   it:
-  pt:
+  pt: |-
+    Você pode colocar 1 outro card "Luminoso(a)" da sua mão no topo do Deck; Invoque este card por Invocação-Especial da sua mão e, depois, envie os 2 cards do topo do seu Deck para o Cemitério. Se este card for enviado do Deck para o Cemitério: você pode escolher 1 monstro "Luminoso(a)" no seu Cemitério, exceto "Weiss, a Arquidemônio Luminosa"; Invoque-o por Invocação-Especial. Você só pode usar cada efeito de "Weiss, a Arquidemônio Luminosa" uma vez por turno.
   ja: |-
     このカード名の①②の効果はそれぞれ１ターンに１度しか使用できない。①：手札から他の「ライトロード」カード１枚をデッキの一番上に戻して発動できる。このカードを手札から特殊召喚する。その後、自分のデッキの上からカードを２枚墓地へ送る。②：このカードがデッキから墓地へ送られた場合、「ライトロード・デーモン ヴァイス」以外の自分の墓地の「ライトロード」モンスター１体を対象として発動できる。そのモンスターを特殊召喚する。
   ko: |-
