--- a/data/cards/50687050.yaml
+++ b/data/cards/50687050.yaml
@@ -7,7 +7,7 @@ name:
   fr: Arktos XII - Chronofaille Vaylantz
   it: Arktos XII - Cronobaratro Vaylantz
   pt: Arktos XII - Vaylantz do Cronoabismo
-  ja: <ruby>針<rt>しん</rt></ruby><ruby>淵<rt>えん</rt></ruby>のヴァリアンツ－アルクトス<ruby>Ⅻ<rt>トゥエルブ</rt></ruby>
+  ja: <ruby>針<rt>しん</rt></ruby><ruby>淵<rt>えん</rt></ruby>のヴァリアンツ－アルクトス<ruby>ⅩⅡ<rt>トゥエルブ</rt></ruby>
   ja_romaji: Shin'en no Variantsu - Arukutosu Tuerubu
   ko: 침연의 밸리언츠－아르크토스 <ruby>XII<rt>트웰브</rt></ruby>
   ko_rr: Chim-yeon-ui Baellieoncheu - Areukeutoseu Teuwelbeu
