--- a/data/rush/yugipedia1055751.yaml
+++ b/data/rush/yugipedia1055751.yaml
@@ -14,7 +14,7 @@ name:
   zh-CN:
 requirement:
   en: |-
-    When a monster on your opponent's field is sent to the Graveyard.
+    When a monster(s) on your opponent's field is sent to the Graveyard.
   de:
   es:
   fr:
