--- a/rush.yaml
+++ b/rush.yaml
@@ -59807,7 +59807,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Negate the attack. Then, change 1 Defense Position monster on your field to face-up Attack Position. If you changed a Normal Monster to face-up Attack Position by this effect, it gains 1000 ATK until the end of this turn.
+    Negate the attack. Then, change 1 Defense Position monster on your field to face-up Attack Position. Then, if you changed a Normal Monster to face-up Attack Position by this effect, it gains 1000 ATK until the end of this turn.
   de:
   es:
   fr:
@@ -107087,7 +107087,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Draw 3 cards. Then, send 1 or more cards from your hand to the Graveyard. If you have no monsters on your field, you take no battle damage from your opponent's Level 8 or lower monsters' attacks this turn.
+    Draw 3 cards. Then, send 1 or more cards from your hand to the Graveyard. Then, if you have no monsters on your field, you take no battle damage from your opponent's Level 8 or lower monsters' attacks this turn.
   de:
   es:
   fr:
@@ -142718,7 +142718,7 @@ name:
   zh-CN:
 requirement:
   en: |-
-    When a monster on your opponent's field is sent to the Graveyard.
+    When a monster(s) on your opponent's field is sent to the Graveyard.
   de:
   es:
   fr:
