--- a/rush.yaml
+++ b/rush.yaml
@@ -142757,3 +142757,62 @@ is_translation_unofficial:
   text:
     en: true
 yugipedia_page_id: 1055751
+---
+konami_id:
+name:
+  en: JAM:P Catch!
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja: ＪＡＭ：Ｐキャッチ！
+  ja_romaji:
+  ko:
+  ko_rr:
+  zh-TW:
+  zh-CN:
+requirement:
+  en: |-
+    When an opponent's monster declares an attack, shuffle 2-4 Psychic Type monsters from your Graveyard into the Deck.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+effect:
+  en: |-
+    Change the attacking monster to face-up Defense Position. Then, if you have a Psychic Type Normal Monster in your Graveyard, you can draw until you have 6 cards in your hand.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+card_type: Trap
+property: Normal
+series:
+- JAM
+images:
+- index: 1
+  image: JAMPCatch-RDKP17-JP-OP.png
+sets:
+  ja:
+  - set_number: RD/KP17-JP063
+    set_name: Burst Rex of Awakening
+    rarities:
+    - Super Rare
+    - Secret Rare
+is_translation_unofficial:
+  name:
+    en: true
+  text:
+    en: true
+yugipedia_page_id: 1055800
