--- a/data/cards/35984222.yaml
+++ b/data/cards/35984222.yaml
@@ -25,7 +25,7 @@ text:
   it: |-
     Non puoi Evocare mostri. Puoi controllare solo 1 "Ido, la Forza Magica Suprema". Se questa carta viene distrutta dall'effetto di una carta e mandata al Cimitero, Evocala tramite Evocazione Speciale dal tuo Cimitero durante la Standby Phase del prossimo turno, e distruggi tutti gli altri mostri che controlli.
   pt: |-
-    Você não pode Invocar monstros. Você só pode controlar 1 "Ido, a Força Mágica Suprema". Se este card for destruído por um efeito de card e enviado para o Cemitério, Invoque-o por Invocação-Especial do seu Cemitério durante a Fase de Apoio do próximo turno e destrua todos os outros monstros que você controla.
+    Você não pode Invocar monstros ou Baixá-los Normalmente. Você só pode controlar 1 "Ido, a Força Mágica Suprema". Uma vez por turno, durante a Fase de Apoio do próximo turno depois que este card foi destruído por um efeito de card e enviado para o Cemitério: Invoque este card por Invocação-Especial do Cemitério e, se isso acontecer, destrua todos os outros monstros que você controla.
   ja: |-
     このカードがカードの効果によって破壊され墓地へ送られた場合、次のターンのスタンバイフェイズ時にこのカードを墓地から特殊召喚し、このカード以外の自分フィールド上に存在するモンスターを全て破壊する。このカードがフィールド上に表側表示で存在する限り、自分はモンスターを通常召喚・反転召喚・特殊召喚する事ができない。「超魔神イド」は自分フィールド上に１枚しか表側表示で存在できない。
   ko: |-
