--- a/data/rush/yugipedia1055800.yaml
+++ b/data/rush/yugipedia1055800.yaml
@@ -6,8 +6,8 @@ name:
   fr:
   it:
   pt:
-  ja: ＪＡＭ：Ｐキャッチ！
-  ja_romaji:
+  ja: <ruby>ＪＡＭ：Ｐ<rt>ジャンプ</rt></ruby>キャッチ！
+  ja_romaji: Janpu Kyacchi!
   ko:
   ko_rr:
   zh-TW:
