--- a/rush.yaml
+++ b/rush.yaml
@@ -142766,8 +142766,8 @@ name:
   fr:
   it:
   pt:
-  ja: ＪＡＭ：Ｐキャッチ！
-  ja_romaji:
+  ja: <ruby>ＪＡＭ：Ｐ<rt>ジャンプ</rt></ruby>キャッチ！
+  ja_romaji: Janpu Kyacchi!
   ko:
   ko_rr:
   zh-TW:
