--- a/data/cards/yugipedia1055817.yaml
+++ b/data/cards/yugipedia1055817.yaml
@@ -8,7 +8,7 @@ name:
   it:
   pt:
   ja: <ruby>影<rt>かげ</rt></ruby><ruby>法<rt>ぼう</rt></ruby><ruby>師<rt>し</rt></ruby>トップハットヘア
-  ja_romaji: Kagebōshi Toppu Hatto Hea
+  ja_romaji: Kagebōshi Toppuhatto Hea
   ko:
   ko_rr:
   zh-TW:
